--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -16,31 +16,29 @@
 
         {% if user.is_authenticated %}
 
-        {% if user.userprofile %}
-        {% comment %} <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'post_create' %}">
-            <div class="btn btn-primary">Create Post</div>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'TaskCreateView' %}">
+            <div class="btn btn-primary">Create task</div>
           </a>
-        </li> {% endcomment %}
-        {% endif %}
+        </li>
 
-        {% comment %} <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'dashboard' %}">
             <div class="btn btn-secondary">Dashboard</div>
           </a>
-        </li> {% endcomment %}
-        {% comment %} <li class="nav-item">
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">
             <div class="btn btn-danger">Logout</div>
           </a>
-        </li> {% endcomment %}
+        </li>
         {% else %}
 
-        {% comment %} <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'login' %}">
             <div class="btn btn-success">Login</div>
           </a>
-        </li> {% endcomment %}
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'register' %}">
             <div class="btn btn-outline-success">Register</div>
